<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <item
            android:id="@+id/home_page"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/my_orders"
            android:icon="@drawable/my_order"
            android:title="@string/product_my" />
        <item
            android:id="@+id/alarms"
            android:icon="@drawable/alarms"
            android:title="@string/order_provide" />
    <item
        android:id="@+id/tax"
        android:icon="@drawable/ic_tax"
        android:title="@string/tax" />
        <item
            android:id="@+id/new_offers"
            android:icon="@drawable/new_offers"
            android:title="@string/my_offer" />

            <item
                android:id="@+id/about_app"
                android:icon="@drawable/about_app"
                android:title="@string/about_app" />
            <item
                android:id="@+id/tearms"
                android:icon="@drawable/tearms"
                android:title="@string/tearms" />
    <item
        android:id="@+id/share_app"
        android:icon="@drawable/share_app"
        android:title="@string/share_app" />
    <item
        android:id="@+id/connect_us"
        android:icon="@drawable/connect_us"
        android:title="@string/connect_us" />
    <item
        android:id="@+id/log_out"
        android:icon="@drawable/ic_sign_out"
        android:title="@string/login" />

</menu>
