<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".app.ui.fragment.splashAndUserCycle.LoginFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimens_6xl"
        android:drawableEnd="@drawable/login"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/login_please"
        android:textColor="@android:color/black"
        android:textSize="@dimen/txt_size_m" />

    <android.support.design.widget.TextInputLayout style="@style/StyleEditText"

        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/LoginFragment_Email"
            style="@style/StyleEditTextNull"
            android:hint="@string/email"

            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout style="@style/StyleEditText">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/LoginFragment_Password"
            style="@style/StyleEditTextNull"
            android:hint="@string/password"

            />

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/LoginFragment_Progress_Bar"
            style="@style/StyleProgressBar"

            />


        <CheckBox
            android:id="@+id/LoginFragment_CB_Remeber_My"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/dimens_l"
            android:layout_marginEnd="@dimen/dimens_l"
            android:fontFamily="@font/cairo_regular"
            android:text="@string/rememberMy"
            android:textColor="@android:color/black" />

    </RelativeLayout>

    <Button
        android:id="@+id/LoginFragment_BT_Login"
        style="@style/StyleButtonWhite"
        android:background="@color/colorButtonLogin"
        android:text="@string/login" />

    <TextView
        android:id="@+id/LoginFragment_TV_Forget_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimens_xl"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/forget_my_password"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="@dimen/txt_size_m" />

    <Button
        android:id="@+id/LoginFragment_Cretae_New_User"
        style="@style/StyleButtonBlack"
        android:layout_marginTop="@dimen/dimens_xl"
        android:background="@color/colorButtonCreate"
        android:text="@string/create_new_user" />

</LinearLayout>

