<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    tools:context=".app.ui.fragment.restaurant.foodItem.AddProductFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_title">

            <ImageView
                android:id="@+id/AddProductFragment_image_title"
                style="@style/ImageViewTitle" />

            <TextView
                android:id="@+id/AddProductFragment_TVTitleCategory"
                style="@style/TextViewTitle"
                android:text="@string/add_new_product" />
        </RelativeLayout>

=<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:layout_below="@+id/relative"
    android:orientation="vertical">
    <com.google.android.material.textfield.TextInputLayout style="@style/StyleEditText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/AddProductFragment_Tiet_Name_Product"
            style="@style/StyleEditTextNull"
            android:hint="@string/name_product" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout style="@style/StyleEditText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/AddProductFragment_Tiet_Describe"
            style="@style/StyleEditTextNull"
            android:hint="@string/descrep_pref"
            android:inputType="textMultiLine"
            android:lines="2" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout style="@style/StyleEditText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/AddProductFragment_Tiet_Price_Product"
            style="@style/StyleEditTextNull"
            android:hint="@string/price_only" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout style="@style/StyleEditText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/AddProductFragment_Tiet_Priod_order"
            style="@style/StyleEditTextNull"
            android:hint="@string/priod_order" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_xl"
        android:gravity="end|center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/AddProductFragment_IM_Add_Photo"
            android:layout_width="@dimen/dimens_seventy"
            android:layout_height="@dimen/dimens_seventy"
            android:layout_marginTop="@dimen/dimens_l"
            android:layout_marginBottom="@dimen/dimens_l"
            android:background="@android:color/darker_gray"
            android:src="@drawable/ic_photo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_xl"
            android:layout_marginEnd="@dimen/dimens_6xl"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/add_picture_product"
            android:textSize="@dimen/txt_size_s" />
    </LinearLayout>

    <Button
        android:id="@+id/AddProductFragment_Bt_Add"
        style="@style/StyleButtonWhite"
        android:layout_marginTop="@dimen/dimens_6xl"
        android:layout_marginBottom="@dimen/dimens_xl"
        android:background="@color/colorButtonLogin"
        android:text="@string/add" />
</LinearLayout>
    <ProgressBar
        android:id="@+id/AddProductFragment_Progress_Bar"
        style="@style/StyleProgressBar" />
</RelativeLayout>
</ScrollView>