<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".app.ui.fragment.splashAndUserCycle.ForgetPasswordStep1Fragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimens_6xl"
        android:drawableEnd="@drawable/login"
        android:fontFamily="@font/cairo_bold"
        android:gravity="center"
        android:text="@string/forget_my_password_l"
        android:textColor="@android:color/black"
        android:textSize="@dimen/txt_size_m" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimens_xl"
        android:fontFamily="@font/cairo_regular"
        android:text="@string/enter_email"
        android:textColor="@android:color/black"
        android:textSize="@dimen/txt_size_m" />

    <com.google.android.material.textfield.TextInputLayout style="@style/StyleEditText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ForgetPasswordStep1Fragment_Email"
            style="@style/StyleEditTextNull"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/ForgetPasswordStep1Fragment_Progress_Bar"
        style="@style/StyleProgressBar"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimens_xl" />

    <Button
        android:id="@+id/ForgetPasswordStep1Fragment_BT_Login"
        style="@style/StyleButtonWhite"
        android:layout_marginTop="@dimen/dimens_6xl"
        android:background="@color/colorButtonLogin"
        android:text="@string/send" />
</LinearLayout>