<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".app.ui.fragment.AddOfferFragment">

    <android.support.design.widget.TextInputLayout
        style="@style/StyleEditText"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/AddOfferFragment_Tiet_Name_Offer"
            style="@style/StyleEditTextNull"
            android:hint="@string/name_product" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        style="@style/StyleEditText"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/AddOfferFragment_Tiet_Describe"
            style="@style/StyleEditTextNull"
            android:hint="@string/descrep_pref"
            android:inputType="textMultiLine"
            android:lines="2"            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/StyleEditText"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/AddOfferFragment_Tiet_Price_Offer"
            style="@style/StyleEditTextNull"
            android:hint="@string/price_only" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="end|center"
        android:layout_marginTop="@dimen/dimens_xl"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/AddOfferFragment_IM_Add_Photo"
            android:layout_marginTop="@dimen/dimens_l"
            android:layout_width="@dimen/dimens_seventy"
            android:layout_height="@dimen/dimens_seventy"
            android:layout_marginBottom="@dimen/dimens_l"
            android:background="@android:color/darker_gray"
            android:src="@drawable/ic_photo"
            />
        <TextView
            android:layout_width="wrap_content"
            android:textSize="@dimen/txt_size_s"
            android:layout_marginEnd="@dimen/dimens_6xl"
            android:layout_marginStart="@dimen/dimens_xl"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/add_picture_offer"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:id="@+id/AddProductFragment_Bt_Add"
        style="@style/StyleButtonWhite"
        android:layout_marginTop="@dimen/dimens_6xl"
        android:layout_marginBottom="@dimen/dimens_xl"
        android:background="@color/colorButtonLogin"
        android:text="@string/add" />
</LinearLayout>