<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".app.ui.fragment.splashAndUserCycle.ForgetPasswordStep2Fragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimens_xl"
        android:fontFamily="@font/cairo_regular"
        android:text="@string/code_change_my_password"
        android:textColor="@android:color/black"
        android:textSize="@dimen/txt_size_m" />

    <com.google.android.material.textfield.TextInputLayout style="@style/StyleEditText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ForgetPasswordStep2Fragment_Code"
            style="@style/StyleEditTextNull"
            android:gravity="center"
            android:hint="@string/code"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/TV_Remind_Time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_l"
        android:gravity="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="@dimen/txt_size_l" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimens_xxxl"
        android:fontFamily="@font/cairo_regular"
        android:text="@string/enter_new_password"
        android:textColor="@android:color/black"
        android:textSize="@dimen/txt_size_m" />

    <com.google.android.material.textfield.TextInputLayout style="@style/StyleEditText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ForgetPasswordStep2Fragment_New_Password"
            style="@style/StyleEditTextNull"
            android:hint="@string/enter_new_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout style="@style/StyleEditText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ForgetPasswordStep2Fragment_Retry_Password"
            style="@style/StyleEditTextNull"
            android:hint="@string/retry_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/ForgetPasswordStep2Fragment_Progress_Bar"
        style="@style/StyleProgressBar"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/ForgetPasswordStep2Fragment_Change"
        style="@style/StyleButtonWhite"
        android:layout_marginTop="@dimen/dimens_6xl"
        android:background="@color/colorButtonLogin"
        android:text="@string/change" />

</LinearLayout>